Lot's of little UX things
Partner logos updated, lots of little language fixes, typos, new UX/card effect for pricing, updated #s and services for sale, and more

--- a/public/partners.html
+++ b/public/partners.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 
 	<meta itemprop="name" content="Lemma">
-	<meta property="og:title" content="Lemma | SAT Partnerships">
+	<meta property="og:title" content="Lemma | SAT Partners">
 	<meta name="twitter:title" content="Lemma">
 	<meta name="description" content="Lemma's SAT platform provides College Access organizations with key insights, custom support, and better test results. Check out who else we're working with!">
 	<meta itemprop="description" content="Lemma's SAT platform provides College Access organizations with key insights, custom support, and better test results. Check out who we're working with here!">
@@ -16,7 +16,7 @@
 	<meta property="fb:app_id" content="810405998993973">
 	<meta property="og:url" content="https://www.lem.ma/prep/">
 	<meta property="og:image" content="https://www.lem.ma/prep/images/og_img.jpg">
-	<title>Lemma - Education is more than content</title>
+	<title>Lemma - SAT Prep Partners</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700,700i&subset=greek,latin" rel="stylesheet" type="text/css">
 	<noscript id="deferred-styles">
@@ -33,24 +33,23 @@
 <body class="body">
 	<body class="body">
 		<div data-collapse="medium" data-animation="default" data-duration="400" class="navbar w-nav">
-			<div class="container w-container">
-				<a href="https://lem.ma/home" class="w-nav-brand"><img src="/img/lemma1920x700.png" width="130" srcset="/img/lemma1920x700-p-500.png 500w, /img/lemma1920x700-p-800.png 800w, /img/lemma1920x700-p-1080.png 1080w, /img/lemma1920x700-p-1600.png 1600w, /img/lemma1920x700.png 1920w" sizes="(max-width: 479px) 93vw, 168px" class="image-17"></a>
-				<nav role="navigation" class="nav-menu w-nav-menu">
-					<a href="#Lemma-Difference" class="nav-link about w-nav-link">About</a>
-					<a href="/home/team" class="nav-link teamlink w-nav-link">Team</a>
-					<a href="/daily" target="_blank" class="nav-link pod w-nav-link">Problem of the Day</a>
-					<a href="/blog" target="_blank" class="nav-link blog w-nav-link">Blog</a>
-					<a href="/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="nav-link login w-nav-link">Login</a>
-				</nav>
+			<div class="w-container"><a href="#" class="w-nav-brand"><img src="/img/lemma1920x700.png" width="130" srcset="/img/lemma1920x700-p-500.png 500w, /img/lemma1920x700-p-800.png 800w, /img/lemma1920x700-p-1080.png 1080w, /img/lemma1920x700-p-1600.png 1600w, /img/lemma1920x700.png 1920w" sizes="(max-width: 479px) 93vw, 168px" class="image-17"></a>
+					<nav role="navigation" class="nav-menu w-nav-menu">
+						<a href="#Lemma-Difference" class="nav-link about w-nav-link">About</a>
+						<a href="/home/team" class="nav-link teamlink w-nav-link">Team</a>
+						<a href="/tracks/sat-math/daily" target="_blank" class="nav-link pod w-nav-link">Problem of the Day</a>
+						<a href="/blog" target="_blank" class="nav-link blog w-nav-link">Blog</a>
+						<a href="/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="nav-link login w-nav-link">Log In</a>
+					</nav>
 				<div class="w-nav-button">
 					<div class="w-icon-nav-menu"></div>
 				</div>
 			</div>
 		</div>
   <div class="hero-section animated fadeIn">
-    <h1 class="hero-intro">Lemma Partnerships</h1>
-    <h1 class="hero-tag">Better insights drive better decisions</h1>
-    <div class="hero-desc">We are proud to partner with educators, tutors, and organizations to deliver better test results to students</div>
+    <h1 class="hero-intro">Meet Our College Access Partners</h1>
+    <h1 class="hero-tag">Improving scores with superior content and concierge service</h1>
+    <div class="hero-desc">We are proud to partner with CBOs to provide them with the tools to drive better outcomes and foster higher engagement</div>
     <div class="button-wrap"><a href="#lemdif" class="hero-button w-button">Learn How</a></div>
   </div>
   <div class="banner-section">
