--- a/public/prep.html
+++ b/public/prep.html
@@ -17,7 +17,7 @@
 	<meta property="og:url" content="https://www.lem.ma/">
 	<meta property="og:image" content="https://www.lem.ma/images/og_img.jpg">
 
-	<title>Lemma - Education is more than content</title>
+	<title>Lemma - Your home for SAT Prep</title>
 
 	<link rel="shortcut icon" href="/favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700,700i&subset=greek,latin" rel="stylesheet" type="text/css">
@@ -33,7 +33,7 @@
 </head>
 <body class="body">
 	<div data-collapse="medium" data-animation="default" data-duration="400" class="navbar w-nav">
-		<div class="container w-container"><a href="#" class="w-nav-brand"><img src="/img/lemma1920x700.png" width="130" srcset="/img/lemma1920x700-p-500.png 500w, /img/lemma1920x700-p-800.png 800w, /img/lemma1920x700-p-1080.png 1080w, /img/lemma1920x700-p-1600.png 1600w, /img/lemma1920x700.png 1920w" sizes="(max-width: 479px) 93vw, 168px" class="image-17"></a>
+		<div class="w-container"><a href="#" class="w-nav-brand"><img src="/img/lemma1920x700.png" width="130" srcset="/img/lemma1920x700-p-500.png 500w, /img/lemma1920x700-p-800.png 800w, /img/lemma1920x700-p-1080.png 1080w, /img/lemma1920x700-p-1600.png 1600w, /img/lemma1920x700.png 1920w" sizes="(max-width: 479px) 93vw, 168px" class="image-17"></a>
 				<nav role="navigation" class="nav-menu w-nav-menu">
 					<a href="#Lemma-Difference" class="nav-link about w-nav-link">About</a>
 					<a href="/home/team" class="nav-link teamlink w-nav-link">Team</a>
@@ -69,10 +69,10 @@
 		<img class="animated fadeIn" src="/img/hero-desk.jpg" width="960" srcset="/img/hero-desk-800.jpeg 800w, /img/hero-desk-1080.jpeg 1080w, /img/hero-desk-1600.jpeg 1600w, /img/hero-desk.jpg 1920w" sizes="(max-width: 991px) 100vw, 960px">
 	</div>
 	<div id="Tagline" class="section-6 animated fadeIn">
-		<h2 class="heading-21">Outstanding math content and support from a team of dedicated educators</h2>
-		<div class="textblock-12">Plans start at $12.50 per month!
+		<h2 class="heading-21">Online SAT Prep trusted by students nationwide</h2>
+		<div class="textblock-12">Unlimited SAT Prep for $9.99 per month!
 			<br>
-			<a href="/pricing" class="pricing-button w-button">Check Out Our Plans!</a>
+			<a href="/pricing" class="pricing-button w-button">Check out our plans!</a>
 		</div>
 	</div>
 	<div id="Lemma-Difference" data-w-id="b93b2bba-f83e-851c-cb32-3aef626fce2f" style="opacity:0" class="lemma-difference">
@@ -84,24 +84,24 @@
 				<div class="dif_block w-col w-col-4">
 					<h3 class="dif_block-heading">Practice</h3>
 					<div class="square-img"><img data-src="/img/hundreds-of-problems.svg" class="lemdifimg" data-ix="icon-grow" /></div>
-					<div class="text-block-3">Hundreds of great problems</div>
+					<div class="text-block-3">Navigate your way through hundreds and hundreds of problems!</div>
 				</div>
 				<div class="dif_block w-col w-col-4">
 					<h3 class="dif_block-heading">Learn</h3>
 					<div class="square-img"><img data-src="/img/personalized-dashboard.svg" class="lemdifimg" data-ix="icon-grow"></div>
-					<div class="text-block-3">Custom dashboard directs your study</div>
+					<div class="text-block-3">Utilize your personalized dashboard to hone in on your weak spots!</div>
 				</div>
 				<div class="dif_block w-col w-col-4">
 					<h3 class="dif_block-heading">Connect</h3>
 					<div class="square-img"><img data-src="/img/communications-suite.svg" class="lemdifimg" data-ix="icon-grow"></div>
-					<div class="text-block-3">Personalized online support</div>
+					<div class="text-block-3">Ask your questions to a tutor assigned to your account!</div>
 				</div>
 			</div>
 		</div>
 	</div>
 	<div id="Partners" data-w-id="4b9faf18-1a3f-979c-346b-5978e67d690d" style="opacity:0" class="section-8">
 		<div class="w-container">
-			<h2 class="heading-10">Our Partners</h2>
+			<h2 class="heading-10">Our SAT Partners</h2>
 			<div class="partner-wrap">
 				<a href="https://www.philadelphiafutures.org/" target="_blank">
 					<img class="partner-image" data-src="/img/pf-color.svg" data-ix="icon-grow"/>
@@ -132,7 +132,7 @@
 	</div>
 	<div data-w-id="1a11049b-3c92-126a-dd13-a1e16d1872c8" style="opacity:0" class="call-banner">
 		<div class="w-container call-2-wrapper">
-			<div class="call-2">Lemma partners with College Access Non-profits to help change their students' lives</div><a href="/partners" class="button-6 w-button">Learn More!</a>
+			<div class="call-2">Lemma partners with College Access Organizations to help propel their students to success</div><a href="/partners" class="button-6 w-button">Learn More!</a>
 		</div>
 	</div>
 	<div data-w-id="a4d2c0b6-9b5e-f9d6-e322-1b3fd50bde31" style="opacity:0" class="section-11">
@@ -141,15 +141,15 @@
 			<div data-duration-in="300" data-duration-out="100" class="w-tabs">
 				<div class="tabs-menu w-tab-menu">
 					<a data-w-tab="Tab 1" class="tabbutton w-inline-block w-tab-link w--current" data-ix="show-tab-indicator">
-						<div>Great Content</div>
+						<div>Better Content</div>
 						<div class="tab-indicator"></div>
 					</a>
 					<a data-w-tab="Tab 2" class="tabbutton w-inline-block w-tab-link" data-ix="show-tab-indicator">
-						<div>Personalized Support</div>
+						<div>Better Tutoring</div>
 						<div class="tab-indicator"></div>
 					</a>
 					<a data-w-tab="Tab 3" class="tabbutton w-inline-block w-tab-link" data-ix="show-tab-indicator">
-						<div> Revolutionary Platform</div>
+						<div> Better Technology</div>
 						<div class="tab-indicator"></div>
 					</a>
 				</div>
@@ -168,7 +168,7 @@
 							<div class="w-col w-col-5" style="margin-top: 20px;">
 								<div class="edge-text">Better Pedagogy:</div>
 								<ul class="edge-list">
-									<li class="list-item">Problems and solutions developed by Pavel Grinfeld, PhD.</li>
+									<li class="list-item">Problems and solutions developed by Dr. Pavel Grinfeld</li>
 									<li class="list-item">Video lessons and solutions that help you see</li>
 									<li class="list-item">Open-ended problems allow for you to prepare for the New SAT</li>
 								</ul>
