--- a/public/pricing.html
+++ b/public/pricing.html
@@ -33,14 +33,14 @@
 
   <body class="body">
     <div data-collapse="medium" data-animation="default" data-duration="400" class="navbar w-nav">
-      <div class="w-container"><a href="https://lem.ma/home" class="w-nav-brand"><img src="/img/lemma1920x700.png" width="130" srcset="/img/lemma1920x700-p-500.png 500w, /img/lemma1920x700-p-800.png 800w, /img/lemma1920x700-p-1080.png 1080w, /img/lemma1920x700-p-1600.png 1600w, /img/lemma1920x700.png 1920w" sizes="(max-width: 479px) 93vw, 168px" class="image-17"></a>
-        <nav role="navigation" class="nav-menu w-nav-menu">
-          <a href="#Lemma-Difference" class="nav-link about w-nav-link">About</a>
-          <a href="/home/team" class="nav-link teamlink w-nav-link">Team</a>
-          <a href="/daily" target="_blank" class="nav-link pod w-nav-link">Problem of the Day</a>
-          <a href="/blog" target="_blank" class="nav-link blog w-nav-link">Blog</a>
-          <a href="/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="nav-link login w-nav-link">Login</a>
-        </nav>
+      <div class="w-container"><a href="#" class="w-nav-brand"><img src="/img/lemma1920x700.png" width="130" srcset="/img/lemma1920x700-p-500.png 500w, /img/lemma1920x700-p-800.png 800w, /img/lemma1920x700-p-1080.png 1080w, /img/lemma1920x700-p-1600.png 1600w, /img/lemma1920x700.png 1920w" sizes="(max-width: 479px) 93vw, 168px" class="image-17"></a>
+          <nav role="navigation" class="nav-menu w-nav-menu">
+            <a href="#Lemma-Difference" class="nav-link about w-nav-link">About</a>
+            <a href="/home/team" class="nav-link teamlink w-nav-link">Team</a>
+            <a href="/tracks/sat-math/daily" target="_blank" class="nav-link pod w-nav-link">Problem of the Day</a>
+            <a href="/blog" target="_blank" class="nav-link blog w-nav-link">Blog</a>
+            <a href="/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="nav-link login w-nav-link">Log In</a>
+          </nav>
         <div class="w-nav-button">
           <div class="w-icon-nav-menu"></div>
         </div>
@@ -56,76 +56,39 @@
     <div class="pricing-wrap">
       <div class="pricing-product">
         <div class="pricing-top blue"></div>
-          <h1 class="pricing-productname">SAT Basic</h1>
+          <h1 class="pricing-productname">Standard Plan</h1>
           <div class="pricing-product-desc-wrap">
             <div class="pricing-price-wrap">
-              <div class="pricing-price" style="height:64px;">Free</div>
+              <div class="pricing-price" style="height:64px;">$9.99<span style="font-size: 16px; font-weight: 300; color: gray">per month </span><br><span style="font-size: 14px; font-weight: 200; color: grey">*one-time payment of $149.85 for 15 months</span></div>
             </div>
-            <div class="pricing-product-desc">Our basic version of Lemma Prep to introduce you to our system!</div>
             <div class="pricing-button-wrap"><a href="https://lem.ma/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="pricing-button blue">Get Started!</a></div>
           </div>
         <ul class="pricing-features">
-          <li class="pricing-list-item">The Lemma Adaptive Button</li>
-          <li class="pricing-list-item">Your question history</li>
-          <li class="pricing-list-item">3 SAT Diagnostics</li>
-          <li class="pricing-list-item">Access to our problem Explorer</li>
+          <li class="pricing-list-item">Access to all lessons, problems, and solutions</li>
+          <li class="pricing-list-item">Refreshable questions for extra practice</li>
+          <li class="pricing-list-item">Three full SAT practice tests</li>
+          <li class="pricing-list-item">Online substantive content support</li>
+          <li class="pricing-list-item">Personalized study planner</li>
+          <li class="pricing-list-item">Lemma analytics and score estimator</li>
         </ul>
-        <ul class="pricing-features-greyed">
-          <li class="pricing-list-item">Fair-weather tutoring support</li>
-          <li class="pricing-list-item">Concept-focused assessments</li>
-          <li class="pricing-list-item">Personalized study-plans</li>
-          <li class="pricing-list-item">The &quot;Essentials of SAT Math&quot; lessons from Pavel Grinfeld</li>
-          <li class="pricing-list-item">Study scheduling from the Lemma Team</li>
-          <li class="pricing-list-item">Test taking strategies</li>
-        </ul>
+        <!--to do Greyed out things do class="pricing-features-greyed"-->
       </div>
-      <div class="pricing-product-m">
+      <div class="pricing-product">
         <div class="pricing-top orange"></div>
-          <h1 class="pricing-productname">SAT Guided</h1>
+          <h1 class="pricing-productname">Personal Tutor Plan</h1>
         <div class="pricing-product-desc-wrap">
           <div class="pricing-price-wrap">
-            <div class="pricing-price">$9.99<span style="font-size: 16px; font-weight: 300; color: gray"> per month</span>
-            <br><span style="font-size: 14px; font-weight: 200; color: grey">*$149.85 for 15 months!</span></div>
+            <div class="pricing-price">$99.99<span style="font-size: 16px; font-weight: 300; color: gray"> per month</span><br><span style="font-size: 14px; font-weight: 200; color: grey">*billed monthly. Cancel anytime.</span></div>
           </div>
-          <div class="pricing-product-desc">The Lemma system guides you to your best SAT score!</div>
           <div class="pricing-button-wrap"><a href="https://lemma.app/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="pricing-button orange">Get Started!</a></div>
         </div>
         <ul class="pricing-features">
-          <li class="pricing-list-item">The Lemma Adaptive Button</li>
-          <li class="pricing-list-item">Your question history</li>
-          <li class="pricing-list-item">Access to our problem Explorer</li>
-          <li class="pricing-list-item">Additional access to other Lemma content</li>
-          <li class="pricing-list-item">Unlimited Practice Tests</li>
-          <li class="pricing-list-item">Fair-weather tutoring support</li>
-          <li class="pricing-list-item">Concept-focused assessments</li>
-          <li class="pricing-list-item">Personalized study-plan</li>
-          <li class="pricing-list-item">Test taking strategies</li>
-          <li class="pricing-list-item">2 &quot;Essentials of SAT Math&quot; lessons from Pavel Grinfeld, PhD. (coming soon!)</li>
+          <li class="pricing-list-item">Everything included the Standard Plan</li>
+          <li class="pricing-list-item">Entrance interview and a personalized study plan from the Lemma team</li>
+          <li class="pricing-list-item">Monthly one-hour teleconferencing sessions with a dedicated Lemma tutor</li>
+          <li class="pricing-list-item">Priority responses to your questions</li>
         </ul>
-        <ul class="pricing-features-greyed">
-          <li class="pricing-list-item">Targetted diagnostic exams and instruction from the Lemma Team</li>
-          <li class="pricing-list-item">Study scheduling from the Lemma Team</li>
-          <li class="pricing-list-item">The complete &quot;Essentials of SAT Math&quot; course from Pavel Grinfeld, PhD. (coming soon!)</li>
-        </ul>
-      </div>
-      <div class="pricing-product">
-        <div class="pricing-top yellow"></div>
-        <h1 class="pricing-productname">SAT Mentored</h1>
-        <div class="pricing-product-desc-wrap">
-          <div class="pricing-price-wrap">
-            <div class="pricing-price">$24.99<span style="font-size: 16px; font-weight: 300; color: gray;"> per month</span><br><span style="font-size: 14px; font-weight: 200; color: grey;">*$374.85 for 15 months of prep!</span></div>
-          </div>
-          <div class="pricing-product-desc">The Lemma team works with you more intensely to boost your score!</div>
-          <div class="pricing-button-wrap"><a href="https://lem.ma/contact" class="pricing-button yellow">Contact us!</a></div>
-        </div>
-        <ul class="pricing-features">
-          <li class="pricing-list-item">Everything in our Guided package, plus...</li>
-          <li class="pricing-list-item">1-Hour turn around on any questions you ask in the system</li>
-          <li class="pricing-list-item">Study scheduling from the Lemma Team</li>
-          <li class="pricing-list-item">The complete &quot;Essentials of SAT Math&quot; course from Pavel Grinfeld, PhD. (coming soon!)</li>
-          <li class="pricing-list-item">Personalized content curated by the Lemma team based on an audit of your skills and weak-points</li>
-          <li class="pricing-list-item">3 hours of virtual tutoring from our experts!<br><span style="font-size: 14px; color: gray;">(you can always add more!)</span></li>
-        </ul>
+        <!-- to do Greyed out things do class="pricing-features-greyed"-->
       </div>
     </div>
     <footer>
